<resources>
    <string-array name="nivel_educate">
        <item>Bachillerato</item>
        <item>Pregrado</item>
        <item>Maestria</item>
        <item>Doctorado</item>
    </string-array>
    <string name="exit">Salir</string>
    <string name="name">Nombre</string>
    <string name="Cedula">Cedula</string>
    <string name="Estrato">Estrato</string>
    <string name="Salario">Salario</string>
    <string name="ingresar">Registrar</string>
    <string name="update">Actualizar</string>
    <string name="app_name">Parcial sqlite Dorellano</string>
    <string name="Nivel_E">Nivel\nEducativo</string>
    <string name="addContact">Agregar Registro</string>
    <string name="listContacto">Lista De Registros</string>
    <string-array name="estrato">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>
