<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".editActivityy">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/Cedula"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="44dp"
            android:text="@string/Salario"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="60dp"
            android:text="@string/Estrato"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Spinner
            android:id="@+id/gruopEstrato"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/edit_text_white"
            android:backgroundTint="#FFFFFF"
            android:backgroundTintMode="add"
            android:popupBackground="@android:drawable/spinner_dropdown_background"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSalario" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="120dp"
            android:text="@string/Nivel_E"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSalario" />

        <Spinner
            android:id="@+id/groupNivelE"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/edit_text_white"
            android:backgroundTint="#FFFFFF"
            android:backgroundTintMode="add"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gruopEstrato" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="180dp"
            android:layout_height="31dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="80dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etCedula"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="76dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <EditText
            android:id="@+id/etSalario"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="52dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/buttonText"
            android:textColorHint="@color/buttonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCedula" />

        <Button
            android:id="@+id/ingresarButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/edit_text_white"
            android:text="@string/ingresar"
            android:textColor="#fff"
            android:textColorHint="@color/buttonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupNivelE" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>